--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 	
     	<!-- Banner -->
 
-	<div class="banner_2" style="left: 12%">
+	<div class="banner_2">
 		<div class="banner_2_background" style="background-image:url(images/banner_2_background.jpg)"></div>
 		<div class="banner_2_container">
 			<div class="banner_2_dots"></div>
