--- a/index2.html
+++ b/index2.html
@@ -158,7 +158,7 @@
                             <div class="cat_menu_container" data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" style="z-index:1000;">
 <!--                                <div class="button_nav"><i class="fas fa-bars"></i> 類別</div>-->
 								<div class="cat_menu_title d-flex flex-row align-items-center justify-content-start">
-									<div class="cat_burger"><i class="fas fa-bars"></i></div>
+									<div class="cat_burger"><i class="fas fa-bars" style="color: #ffffff;"></i></div>
 									<div class="cat_menu_text" ></div>
 								</div>
 
