--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                                                     <li><a class="clc" href="#">地方</a></li>
 													<li><a class="clc" href="#">財經</a></li>
 													<li><a class="clc" href="#">體育</a></li>
+                                                    <li><a class="clc" href="#">科技</a></li>
 													<li><a class="clc" href="#">娛樂</a></li>
 												</ul>
 											</div>
@@ -214,23 +215,40 @@
 										<a href="#">政治<i class="fas fa-chevron-down"></i></a>
 										<ul>
 											<li>
-												<a href="#">Menu Item<i class="fas fa-chevron-down"></i></a>
+												<a href="#">政治影音<i class="fas fa-chevron-down"></i></a>
 												<ul>
-													<li><a href="#">Menu Item<i class="fas fa-chevron-down"></i></a></li>
-													<li><a href="#">Menu Item<i class="fas fa-chevron-down"></i></a></li>
-													<li><a href="#">Menu Item<i class="fas fa-chevron-down"></i></a></li>
+													<li><a href="#">2020開票結果<i class="fas fa-chevron-down"></i></a></li>
+													<li><a href="#">2020總統大選<i class="fas fa-chevron-down"></i></a></li>
+													<li><a href="#">2020藍綠版圖<i class="fas fa-chevron-down"></i></a></li>
 												</ul>
 											</li>
-											<li><a href="#">Menu Item<i class="fas fa-chevron-down"></i></a></li>
-											<li><a href="#">Menu Item<i class="fas fa-chevron-down"></i></a></li>
-											<li><a href="#">Menu Item<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="#">三讀法案<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="#">兩岸議題<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="#">邦交國<i class="fas fa-chevron-down"></i></a></li>
 										</ul>
 									</li>
+									<li class="hassubs">
+										<a href="#">社會地方<i class="fas fa-chevron-down"></i></a>
+										<ul>
+											<li>
+												<a href="#">大台北<i class="fas fa-chevron-down"></i></a>											
+											</li>
+											<li><a href="#">北台灣<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="#">中部離島<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="#">南台灣<i class="fas fa-chevron-down"></i></a></li>
+                                            <li><a href="#">東台灣<i class="fas fa-chevron-down"></i></a></li>
+										</ul>
+									</li>                                    
 									<li class="hassubs">
 										<a href="#">財經<i class="fas fa-chevron-down"></i></a>
 										<ul>
 											<li><a href="shop.html">財經大事<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="product.html">股市匯市<i class="fas fa-chevron-down"></i></a></li>
+                                            <ul>
+													<li><a href="#">2020開票結果<i class="fas fa-chevron-down"></i></a></li>
+													<li><a href="#">2020總統大選<i class="fas fa-chevron-down"></i></a></li>
+													<li><a href="#">2020藍綠版圖<i class="fas fa-chevron-down"></i></a></li>
+												</ul>
 											<li><a href="blog.html">房地產<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="blog_single.html">2020報稅<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="regular.html">投資理財<i class="fas fa-chevron-down"></i></a></li>
@@ -248,6 +266,15 @@
 -->
                                         </ul>
                                     </li>
+                                    <li class="hassubs"><a href="contact.html">科技<i class="fas fa-chevron-down"></i></a>
+                                        <ul>											
+											<li><a href="blog.html">iPhone手機<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="blog_single.html">3C家電<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="regular.html">手機APP<i class="fas fa-chevron-down"></i></a></li>
+                                            <li><a href="shop.html">人工智慧<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="product.html">3C產品開箱<i class="fas fa-chevron-down"></i></a></li>
+                                        </ul>
+                                    </li>         
 									<li class="hassubs"><a href="contact.html">娛樂<i class="fas fa-chevron-down"></i></a>
                                         <ul>
 											<li><a href="shop.html">電影<i class="fas fa-chevron-down"></i></a></li>
@@ -256,7 +283,31 @@
 											<li><a href="blog_single.html">日韓<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="regular.html">歐美<i class="fas fa-chevron-down"></i></a></li>
                                         </ul>
-                                    </li>                                        
+                                    </li>
+                                    <li class="hassubs"><a href="contact.html">健康<i class="fas fa-chevron-down"></i></a>
+                                        <ul>
+											<li><a href="shop.html">養生飲食<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="product.html">癌症<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="blog.html">減肥塑身<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="blog_single.html">慢性病<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="regular.html">憂鬱症<i class="fas fa-chevron-down"></i></a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="hassubs"><a href="contact.html">生活<i class="fas fa-chevron-down"></i></a>
+                                        <ul>
+											<li><a href="shop.html">交通旅遊<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="product.html">美食餐廳<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="blog.html">兩性親子<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="blog_single.html">文教新訊<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="regular.html">生活影音<i class="fas fa-chevron-down"></i></a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="hassubs"><a href="contact.html">天氣</a>
+                                    </li>
+                                    <li class="hassubs"><a href="contact.html">影音</a>
+                                    </li>
+                                    <li class="hassubs"><a href="contact.html"><i class="fas fa-hospital"></i>新冠病毒</a>
+                                    </li>
 								</ul>
 							</div>
 
