--- a/index2.html
+++ b/index2.html
@@ -149,7 +149,7 @@
 	</header>
     <div class="row">
         <div id="row_1" class="col-md-2">
-		  <nav class="main_nav" id= "main_nav">
+		  <nav class="main_nav" id= "main_nav"  style="width: 80%">
             <div class="main_nav_content d-flex flex-row">
             <!-- Categories Menu -->
 							
@@ -164,27 +164,119 @@
 
 								<ul class="cat_menu">
 									<li><a href="#">首頁<i class="fas fa-chevron-right ml-auto"></i></a></li>
-									<li><a href="#">國際<i class="fas fa-chevron-right"></i></a></li>
+                                	<li class="hassubs">
+										<a href="#">國際<i class="fas fa-chevron-right"></i></a>
+										<ul>
+											<li>
+												<a href="#">國際大事<i class="fas fa-chevron-down"></i></a>
+												<ul>
+													<li><a href="#">美洲<i class="fas fa-chevron-down"></i></a></li>
+													<li><a href="#">歐洲<i class="fas fa-chevron-down"></i></a></li>
+													<li><a href="#">大陸<i class="fas fa-chevron-down"></i></a></li>
+												</ul>
+											</li>
+											<li><a href="#">世界日報<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="#">紐約時報<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="#">德國之聲<i class="fas fa-chevron-down"></i></a></li>
+										</ul>
+									</li>                                                          
 									<li class="hassubs">
 										<a href="#">政治<i class="fas fa-chevron-right"></i></a>
 										<ul>
-											<li class="hassubs">
-												<a href="#">Menu Item<i class="fas fa-chevron-right"></i></a>
+											<li>
+												<a href="#">政治影音<i class="fas fa-chevron-down"></i></a>
 												<ul>
-													<li><a href="#">Menu Item<i class="fas fa-chevron-right"></i></a></li>
-													<li><a href="#">Menu Item<i class="fas fa-chevron-right"></i></a></li>
-													<li><a href="#">Menu Item<i class="fas fa-chevron-right"></i></a></li>
-													<li><a href="#">Menu Item<i class="fas fa-chevron-right"></i></a></li>
+													<li><a href="#">2020開票結果<i class="fas fa-chevron-down"></i></a></li>
+													<li><a href="#">2020總統大選<i class="fas fa-chevron-down"></i></a></li>
+													<li><a href="#">2020藍綠版圖<i class="fas fa-chevron-down"></i></a></li>
 												</ul>
 											</li>
-											<li><a href="#">Menu Item<i class="fas fa-chevron-right"></i></a></li>
-											<li><a href="#">Menu Item<i class="fas fa-chevron-right"></i></a></li>
-											<li><a href="#">Menu Item<i class="fas fa-chevron-right"></i></a></li>
+											<li><a href="#">三讀法案<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="#">兩岸議題<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="#">邦交國<i class="fas fa-chevron-down"></i></a></li>
 										</ul>
 									</li>
-									<li><a href="#">財經<i class="fas fa-chevron-right"></i></a></li>
-									<li><a href="#">體育<i class="fas fa-chevron-right"></i></a></li>
-									<li><a href="#">娛樂<i class="fas fa-chevron-right"></i></a></li>
+									<li class="hassubs">
+										<a href="#">社會地方<i class="fas fa-chevron-right"></i></a>
+										<ul>
+											<li>
+												<a href="#">大台北<i class="fas fa-chevron-down"></i></a>											
+											</li>
+											<li><a href="#">北台灣<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="#">中部離島<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="#">南台灣<i class="fas fa-chevron-down"></i></a></li>
+                                            <li><a href="#">東台灣<i class="fas fa-chevron-down"></i></a></li>
+										</ul>
+									</li>                                    
+									<li class="hassubs">
+										<a href="#">財經<i class="fas fa-chevron-right"></i></a>
+										<ul>
+											<li><a href="shop.html">財經大事<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="product.html">股市匯市<i class="fas fa-chevron-down"></i></a></li>
+                                            <ul>
+													<li><a href="#">2020開票結果<i class="fas fa-chevron-down"></i></a></li>
+													<li><a href="#">2020總統大選<i class="fas fa-chevron-down"></i></a></li>
+													<li><a href="#">2020藍綠版圖<i class="fas fa-chevron-down"></i></a></li>
+												</ul>
+											<li><a href="blog.html">房地產<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="blog_single.html">2020報稅<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="regular.html">投資理財<i class="fas fa-chevron-down"></i></a></li>
+										</ul>
+									</li>
+									<li class="hassubs"><a href="blog.html">體育<i class="fas fa-chevron-right"></i></a>                  <ul>
+											<li><a href="shop.html">棒球<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="product.html">籃球<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="blog.html">網球<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="blog_single.html">高爾夫球<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="regular.html">羽球<i class="fas fa-chevron-down"></i></a></li>
+<!--
+                                            <li><a href="blog_single.html">NBA<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="regular.html">MLB<i class="fas fa-chevron-down"></i></a></li>
+-->
+                                        </ul>
+                                    </li>
+                                    <li class="hassubs"><a href="contact.html">科技<i class="fas fa-chevron-right"></i></a>
+                                        <ul>											
+											<li><a href="blog.html">iPhone手機<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="blog_single.html">3C家電<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="regular.html">手機APP<i class="fas fa-chevron-down"></i></a></li>
+                                            <li><a href="shop.html">人工智慧<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="product.html">3C產品開箱<i class="fas fa-chevron-down"></i></a></li>
+                                        </ul>
+                                    </li>         
+									<li class="hassubs"><a href="contact.html">娛樂<i class="fas fa-chevron-right"></i></a>
+                                        <ul>
+											<li><a href="shop.html">電影<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="product.html">影視名人<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="blog.html">戲劇<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="blog_single.html">日韓<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="regular.html">歐美<i class="fas fa-chevron-down"></i></a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="hassubs"><a href="contact.html">健康<i class="fas fa-chevron-right"></i></a>
+                                        <ul>
+											<li><a href="shop.html">養生飲食<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="product.html">癌症<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="blog.html">減肥塑身<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="blog_single.html">慢性病<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="regular.html">憂鬱症<i class="fas fa-chevron-down"></i></a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="hassubs"><a href="contact.html">生活<i class="fas fa-chevron-right"></i></a>
+                                        <ul>
+											<li><a href="shop.html">交通旅遊<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="product.html">美食餐廳<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="blog.html">兩性親子<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="blog_single.html">文教新訊<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="regular.html">生活影音<i class="fas fa-chevron-down"></i></a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="hassubs"><a href="contact.html">天氣</a>
+                                    </li>
+                                    <li class="hassubs"><a href="contact.html">影音</a>
+                                    </li>
+                                    <li class="hassubs"><a href="contact.html"><i class="fas fa-hospital"></i>新冠病毒</a>
+                                    </li>
 <!--
 									<li><a href="#">Car Electronics<i class="fas fa-chevron-right"></i></a></li>
 									<li><a href="#">Video Games & Consoles<i class="fas fa-chevron-right"></i></a></li>
@@ -388,12 +480,12 @@
 							<!-- Trends Slider Item -->
 							<div class="owl-item">
 								<div class="trends_item">
-									<div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/trends_2.jpg" alt=""></div>
+									<div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/photo2.jpg" alt=""></div>
 									<div class="trends_content">
-										<div class="trends_category"><a href="#">Smartphones</a></div>
+										<div class="trends_category"><a href="#">科技/3C家電</a></div>
 										<div class="trends_info clearfix">
-											<div class="trends_name"><a href="product.html">Samsung Charm...</a></div>
-											<div class="trends_price">$379</div>
+											<div class="trends_name"><a href="product.html">以下是我們正在追蹤的2020年五大科技趨勢，它們有可能帶來重大的改變和顛覆。</a></div>
+<!--											<div class="trends_price">$379</div>-->
 										</div>
 									</div>
 									<ul class="trends_marks">
@@ -904,7 +996,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                 if (mode != 'false') {
                     //$('#collapseOne').css('display', 'inline');
                     $('.cat_menu').css('display', 'none');
-                    $('.main_nav').css('width', '50%');
+                    $('.main_nav').css('width', '68%');
                     $('#row_1').removeClass('col-md-2');
                     $('#row_1').addClass('col-md-1');
 //                    $('#row_2').removeClass('col-md-10');
