--- a/index4_political.html
+++ b/index4_political.html
@@ -146,8 +146,8 @@
 								    <li><a href="#">德國之聲<i class="fas fa-chevron-down"></i></a></li>
 								</ul>
 				            </li>                                                          
-				            <li class="hassubs">
-								<a href="../News/index4_political.html">政治<i class="fas fa-chevron-right"></i></a>
+				            <li class="hassubs" >
+								<a href="../News/index4_political.html" style="font-weight: 600;color: #17a2b8;">政治<i class="fas fa-chevron-right"></i></a>
 								<ul>
 								    <li>
 								        <a href="#">政治影音<i class="fas fa-chevron-down"></i></a>
@@ -232,7 +232,7 @@
                             </li>
                             <li class="hassubs"><a href="contact.html">影音</a>
                             </li>
-                            <li class="hassubs"><a href="../News/index4_covid19.html"><i class="fas fa-hospital"></i>新冠病毒</a>
+                            <li class="hassubs"><a href="../News/index4_covid19.html"><i class="fas fa-hospital"></i>新冠肺炎</a>
                             </li>
 				        </ul>								
 				    </div>
@@ -254,74 +254,11 @@
                 <div class="trends_background" style="background-image:url(images/trends_background.jpg)"></div>
                 <div class="trends_overlay"></div>
                 <div class="container">
-                 <div class="advert_title" style="font-size: 14px;"><a href="#">&nbsp首頁</a></div>
+                 <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&nbsp政治</a></div>
                     <div class="row" style="padding-top: 10px;">
                         <div class="adverts">
                             <div class="container">
-                                <div class="row">
-                                    <div class="col-lg-12 advert_col">
-                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
-                                            <div class="advert_content">
-                                                <div class="advert_title"><a href="#">科技/3C家電</a></div>
-                                                <div class="advert_text"><a href="#">2020年五大科技趨勢，重大的改變和顛覆。</a></div>
-                                            </div>
-                                            <div class="ml-auto"><div class="advert_image"><img src="images/photo2.jpg" alt=""></div></div>
-                                       </div>
-                                    </div>
-                                    <div class="col-lg-12 advert_col">
-                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
-                                            <div class="advert_content">
-                                                <div class="advert_title"><a href="#">生活/文教資訊</a></div>
-                                                <div class="advert_text"><a href="#">白老虎瀕臨絕種，人類開墾嚴重影響其棲息地。</a></div>
-                                            </div>
-                                        <div class="ml-auto"><div class="advert_image"><img src="images/photo3.jpg" alt=""></div></div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-12 advert_col">
-                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
-                                            <div class="advert_content">
-                                                <div class="advert_title"><a href="#">天氣</a></div>
-                                                <div class="advert_text"><a href="#">一週天氣快看！午後雷陣雨旺盛 這天起高溫恐破36度</a></div>
-                                            </div>
-                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_10.jpg" alt=""></div></div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-12 advert_col">
-                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
-                                            <div class="advert_content">
-                                                <div class="advert_title"><a href="#">財經/2020報稅</a></div>
-                                                <div class="advert_text"><a href="#">免結算申報標準大公開，年收40.8萬以下免繳稅</a></div>
-                                            </div>
-                                            <div class="ml-auto"><div class="advert_image"><img src="images/photo4.jpg" alt=""></div></div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-12 advert_col">
-                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
-                                            <div class="advert_content">
-                                                <div class="advert_title"><a href="#">國際/國際大事</a></div>
-                                                <div class="advert_text"><a href="#">香港發起「反惡歌法」大遊行，港警舉旗射煙霧彈驅離</a></div>
-                                            </div>
-                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_1.jpg" alt=""></div></div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-12 advert_col">
-                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
-                                            <div class="advert_content">
-                                                <div class="advert_title"><a href="#">地方/中部離島</a></div>
-                                                <div class="advert_text"><a href="#">台中房價狂飆 房仲：西屯恐將破百萬</a></div>
-                                            </div>
-                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_7.jpg" alt=""></div></div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-12 advert_col">
-                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
-                                            <div class="advert_content">
-                                                <div class="advert_title"><a href="#">生活/文教資訊</a></div>
-                                                <div class="advert_text"><a href="#">口罩解禁！部分通路開賣日期確定了</a></div>
-                                            </div>
-                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_2.jpg" alt=""></div></div>
-                                        </div>
-                                    </div>
+                                <div class="row">  
                                     <div class="col-lg-12 advert_col">
                                         <div class="advert d-flex flex-row align-items-center justify-content-start">
                                             <div class="advert_content">
@@ -334,10 +271,28 @@
                                     <div class="col-lg-12 advert_col">
                                         <div class="advert d-flex flex-row align-items-center justify-content-start">
                                             <div class="advert_content">
-                                                <div class="advert_title"><a href="#">財經/房地產</a></div>
-                                                <div class="advert_text"><a href="#">疫情趨緩房市跟著開紅盤 五月交易量大增2成</a></div>
+                                                <div class="advert_title"><a href="#">政治/兩岸議題</a></div>
+                                                <div class="advert_text"><a href="#">習近平嗆武統 歐洲議會批中挺台</a></div>
                                             </div>
                                             <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_8.jpg" alt=""></div></div>
+                                        </div>
+                                    </div>
+                                     <div class="col-lg-12 advert_col">
+                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
+                                            <div class="advert_content">
+                                                <div class="advert_title"><a href="#">政治/邦交國</a></div>
+                                                <div class="advert_text"><a href="#">友邦巴拉圭轉向北京？參院表決未通過</a></div>
+                                            </div>
+                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_16.jpg" alt=""></div></div>
+                                        </div>
+                                    </div>
+                                     <div class="col-lg-12 advert_col">
+                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
+                                            <div class="advert_content">
+                                                <div class="advert_title"><a href="#">政治/三讀法案</a></div>
+                                                <div class="advert_text"><a href="#">《反滲透法》三讀通過！配合「境外敵對勢力」干預選舉最重關5年、罰千萬</a></div>
+                                            </div>
+                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_16.jpg" alt=""></div></div>
                                         </div>
                                     </div>
                                 </div>
@@ -382,7 +337,7 @@
 </html>
 
  <script type="text/javascript">
-     $(document).on('click', '.cat_menu_container', function () {
+     $(document).on('click', '.cat_menu_title', function () {
         const mode = $(this).attr('aria-expanded');
             if (mode != 'false') {
                     $('.cat_menu').css('display', 'none');
