--- a/index2.html
+++ b/index2.html
@@ -143,6 +143,7 @@
                                         <li><a href="#">2020藍綠版圖<i class="fas fa-chevron-down"></i></a></li>
                                      </ul>
                                 </li>
+                                <li><a href="#">政治要聞<i class="fas fa-chevron-down"></i></a></li>
                                 <li><a href="#">三讀法案<i class="fas fa-chevron-down"></i></a></li>
                                 <li><a href="#">兩岸議題<i class="fas fa-chevron-down"></i></a></li>
                                 <li><a href="#">邦交國<i class="fas fa-chevron-down"></i></a></li>
