update index internation

--- a/index4_weather.html
+++ b/index4_weather.html
@@ -228,11 +228,11 @@
                                     <li><a href="regular.html">生活影音<i class="fas fa-chevron-down"></i></a></li>
                                 </ul>
                             </li>
-                            <li class="hassubs"><a href="../News/index4_weather.html" >天氣</a>
+                            <li class="hassubs"><a href="../News/index4_weather.html" style="font-weight: 600;color: #17a2b8;">天氣</a>
                             </li>
                             <li class="hassubs"><a href="contact.html">影音</a>
                             </li>
-                            <li class="hassubs"><a href="../News/index4_covid19.html" style="font-weight: 600;color: #17a2b8;"><i class="fas fa-hospital"></i>新冠肺炎</a>
+                            <li class="hassubs"><a href="../News/index4_covid19.html"><i class="fas fa-hospital"></i>新冠肺炎</a>
                             </li>
 				        </ul>								
 				    </div>
