--- a/index4.html
+++ b/index4.html
@@ -129,9 +129,9 @@
 				            <div class="cat_menu_text" ></div>
 						</div>
 				        <ul class="cat_menu">
-				            <li><a href="../News/index4.html">首頁<i class="fas fa-chevron-right ml-auto"></i></a></li>
+				            <li><a href="../News/index4.html" style="font-weight: 600;color: #17a2b8;">首頁<i class="fas fa-chevron-right ml-auto"></i></a></li>
                             <li class="hassubs">
-				                <a href="../News/index4_internation.html">國際<i class="fas fa-chevron-right"></i></a>
+				                <a href="../News/index_internation.html">國際<i class="fas fa-chevron-right"></i></a>
 				                <ul>
 								    <li>
 								        <a href="#">國際大事<i class="fas fa-chevron-down"></i></a>
