--- a/index_sport.html
+++ b/index_sport.html
@@ -131,7 +131,7 @@
 										</ul>
 									</li>
 									<li class="hassubs">
-										<a href="../News/index_political.html" style="font-weight: 600;color: #17a2b8;">政治<i class="fas fa-chevron-down"></i></a>
+										<a href="../News/index_political.html">政治<i class="fas fa-chevron-down"></i></a>
 										<ul>
 											<li>
 												<a href="#">政治影音<i class="fas fa-chevron-down"></i></a>
@@ -174,7 +174,8 @@
 											<li><a href="regular.html">投資理財<i class="fas fa-chevron-down"></i></a></li>
 										</ul>
 									</li>
-									<li class="hassubs"><a href="../News/index_sport.html">體育<i class="fas fa-chevron-down"></i></a>                  <ul>
+									<li class="hassubs"><a href="../News/index_sport.html" style="font-weight: 600;color: #17a2b8;">體育<i class="fas fa-chevron-down"></i></a>                  
+                                        <ul>
 											<li><a href="shop.html">棒球<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="product.html">籃球<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="blog.html">網球<i class="fas fa-chevron-down"></i></a></li>
@@ -209,7 +210,7 @@
 											<li><a href="regular.html">憂鬱症<i class="fas fa-chevron-down"></i></a></li>
                                         </ul>
                                     </li>
-                                    <li class="hassubs"><a href="../News/index_life.html">生活<i class="fas fa-chevron-down"></i></a>
+                                    <li class="hassubs"><a href="../News/index_life.htmll">生活<i class="fas fa-chevron-down"></i></a>
                                         <ul>
 											<li><a href="shop.html">交通旅遊<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="product.html">美食餐廳<i class="fas fa-chevron-down"></i></a></li>
@@ -331,7 +332,7 @@
                 <div class="trends_background" style="background-image:url(images/trends_background.jpg)"></div>
                 <div class="trends_overlay"></div>
                 <div class="container">
-                <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&nbsp政治</a></div>
+                <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&nbsp財經</a></div>
                     <div class="row" style="padding-top: 20px;">
                         <!-- Trends Slider -->
                         <div class="col-lg-12">
@@ -341,11 +342,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_1.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_9.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">國際/國際大事</a></div>
+                                                <div class="trends_category"><a href="#">運動/棒球</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">香港發起「反惡歌法」大遊行，港警舉旗射煙霧彈驅離</a></div>
+                                                    <div class="trends_name"><a href="product.html">追分時刻可惜了，宜蘭縣跑者遭牽制出局</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -358,11 +359,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_18.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_26.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">國際/紐約時報</a></div>
+                                                <div class="trends_category"><a href="#">運動/網球</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">北京仍呼籲合作，但已加強抗衡美國的決心</a></div>
+                                                    <div class="trends_name"><a href="product.html">網球防疫盃／單、雙都闖決賽 混血美少女收一冠一亞</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -375,11 +376,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_19.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_27.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">國際/國際大事</a></div>
+                                                <div class="trends_category"><a href="#">運動/棒球</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">特朗普宣布美國將取消香港特殊待遇、退出WHO</a></div>
+                                                    <div class="trends_name"><a href="product.html">中職／索沙8局神封鎖 悍將痛擊兄弟</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -402,17 +403,13 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_20.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_28.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">國際/紐約時報</a></div>
+                                                <div class="trends_category"><a href="#">運動/籃球</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">他揭露了韋恩斯坦性醜聞，但他的報導真的無懈可擊嗎？</a></div>
+                                                    <div class="trends_name"><a href="product.html">NBA／坦承人生因喬丹而改變 柯爾：我欠他太多太多</a></div>
                                                 </div>
                                             </div>
-                                            <ul class="trends_marks">
-                                                <li class="trends_mark trends_discount">-25%</li>
-                                                <li class="trends_mark trends_new">HOT</li>
-                                            </ul>
                                             <div class="trends_fav"><i class="fas fa-heart"></i></div>
                                         </div>
                                     </div>
