--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 										</ul>
 									</li>
 									<li class="hassubs">
-										<a href="../News/index4_political.html">政治<i class="fas fa-chevron-down"></i></a>
+										<a href="../News/index_political.html">政治<i class="fas fa-chevron-down"></i></a>
 										<ul>
 											<li>
 												<a href="#">政治影音<i class="fas fa-chevron-down"></i></a>
@@ -148,7 +148,7 @@
 										</ul>
 									</li>
 									<li class="hassubs">
-										<a href="#">社會地方<i class="fas fa-chevron-down"></i></a>
+										<a href="../News/index_location.html">社會地方<i class="fas fa-chevron-down"></i></a>
 										<ul>
 											<li>
 												<a href="#">大台北<i class="fas fa-chevron-down"></i></a>											
@@ -160,7 +160,7 @@
 										</ul>
 									</li>                                    
 									<li class="hassubs">
-										<a href="#">財經<i class="fas fa-chevron-down"></i></a>
+										<a href="../News/index_money.html">財經<i class="fas fa-chevron-down"></i></a>
 										<ul>
 											<li><a href="shop.html">財經大事<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="product.html">股市匯市<i class="fas fa-chevron-down"></i></a></li>
@@ -174,7 +174,7 @@
 											<li><a href="regular.html">投資理財<i class="fas fa-chevron-down"></i></a></li>
 										</ul>
 									</li>
-									<li class="hassubs"><a href="blog.html">體育<i class="fas fa-chevron-down"></i></a>                  <ul>
+									<li class="hassubs"><a href="../News/index_sport.html">體育<i class="fas fa-chevron-down"></i></a>                  <ul>
 											<li><a href="shop.html">棒球<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="product.html">籃球<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="blog.html">網球<i class="fas fa-chevron-down"></i></a></li>
@@ -182,7 +182,7 @@
 											<li><a href="regular.html">羽球<i class="fas fa-chevron-down"></i></a></li>
                                         </ul>
                                     </li>
-                                    <li class="hassubs"><a href="contact.html">科技<i class="fas fa-chevron-down"></i></a>
+                                    <li class="hassubs"><a href="../News/index_tech.html">科技<i class="fas fa-chevron-down"></i></a>
                                         <ul>											
 											<li><a href="blog.html">iPhone手機<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="blog_single.html">3C家電<i class="fas fa-chevron-down"></i></a></li>
@@ -191,7 +191,7 @@
 											<li><a href="product.html">3C產品開箱<i class="fas fa-chevron-down"></i></a></li>
                                         </ul>
                                     </li>         
-									<li class="hassubs"><a href="contact.html">娛樂<i class="fas fa-chevron-down"></i></a>
+									<li class="hassubs"><a href="../News/index_art.html">娛樂<i class="fas fa-chevron-down"></i></a>
                                         <ul>
 											<li><a href="shop.html">電影<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="product.html">影視名人<i class="fas fa-chevron-down"></i></a></li>
@@ -200,7 +200,7 @@
 											<li><a href="regular.html">歐美<i class="fas fa-chevron-down"></i></a></li>
                                         </ul>
                                     </li>
-                                    <li class="hassubs"><a href="contact.html">健康<i class="fas fa-chevron-down"></i></a>
+                                    <li class="hassubs"><a href="../News/index_health.html">健康<i class="fas fa-chevron-down"></i></a>
                                         <ul>
 											<li><a href="shop.html">養生飲食<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="product.html">癌症<i class="fas fa-chevron-down"></i></a></li>
@@ -209,7 +209,7 @@
 											<li><a href="regular.html">憂鬱症<i class="fas fa-chevron-down"></i></a></li>
                                         </ul>
                                     </li>
-                                    <li class="hassubs"><a href="contact.html">生活<i class="fas fa-chevron-down"></i></a>
+                                    <li class="hassubs"><a href="../News/index_life.html">生活<i class="fas fa-chevron-down"></i></a>
                                         <ul>
 											<li><a href="shop.html">交通旅遊<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="product.html">美食餐廳<i class="fas fa-chevron-down"></i></a></li>
@@ -218,11 +218,11 @@
 											<li><a href="regular.html">生活影音<i class="fas fa-chevron-down"></i></a></li>
                                         </ul>
                                     </li>
-                                    <li class="hassubs"><a href="contact.html">天氣</a>
+                                    <li class="hassubs"><a href="../News/index_weather.html">天氣</a>
                                     </li>
                                     <li class="hassubs"><a href="contact.html">影音</a>
                                     </li>
-                                    <li class="hassubs"><a href="contact.html"><i class="fas fa-hospital"></i>新冠病毒</a>
+                                    <li class="hassubs"><a href="../News/index_covid19.html"><i class="fas fa-hospital"></i>新冠病毒</a>
                                     </li>
 								</ul>
 							</div>
