--- a/index4_internation.html
+++ b/index4_internation.html
@@ -271,7 +271,7 @@
                                     <div class="col-lg-12 advert_col">
                                         <div class="advert d-flex flex-row align-items-center justify-content-start">
                                             <div class="advert_content">
-                                                <div class="advert_title"><a href="#">政治/紐約時報</a></div>
+                                                <div class="advert_title"><a href="#">國際/紐約時報</a></div>
                                                 <div class="advert_text"><a href="#">北京仍呼籲合作，但已加強抗衡美國的決心</a></div>
                                             </div>
                                             <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_18.jpg" alt=""></div></div>
@@ -289,7 +289,7 @@
                                     <div class="col-lg-12 advert_col">
                                         <div class="advert d-flex flex-row align-items-center justify-content-start">
                                             <div class="advert_content">
-                                                <div class="advert_title"><a href="#">政治/紐約時報</a></div>
+                                                <div class="advert_title"><a href="#">國際/紐約時報</a></div>
                                                 <div class="advert_text"><a href="#">他揭露了韋恩斯坦性醜聞，但他的報導真的無懈可擊嗎？</a></div>
                                             </div>
                                             <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_20.jpg" alt=""></div></div>
