--- a/index_location.html
+++ b/index_location.html
@@ -131,7 +131,7 @@
 										</ul>
 									</li>
 									<li class="hassubs">
-										<a href="../News/index_political.html" style="font-weight: 600;color: #17a2b8;">政治<i class="fas fa-chevron-down"></i></a>
+										<a href="../News/index_political.html">政治<i class="fas fa-chevron-down"></i></a>
 										<ul>
 											<li>
 												<a href="#">政治影音<i class="fas fa-chevron-down"></i></a>
@@ -148,7 +148,7 @@
 										</ul>
 									</li>
 									<li class="hassubs">
-										<a href="../News/index_location.html">社會地方<i class="fas fa-chevron-down"></i></a>
+										<a href="../News/index_location.html"  style="font-weight: 600;color: #17a2b8;">社會地方<i class="fas fa-chevron-down"></i></a>
 										<ul>
 											<li>
 												<a href="#">大台北<i class="fas fa-chevron-down"></i></a>											
@@ -331,7 +331,7 @@
                 <div class="trends_background" style="background-image:url(images/trends_background.jpg)"></div>
                 <div class="trends_overlay"></div>
                 <div class="container">
-                <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&nbsp政治</a></div>
+                <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&nbsp社會地方</a></div>
                     <div class="row" style="padding-top: 20px;">
                         <!-- Trends Slider -->
                         <div class="col-lg-12">
@@ -341,11 +341,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_1.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_7.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">國際/國際大事</a></div>
+                                                <div class="trends_category"><a href="#">地方/中部離島</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">香港發起「反惡歌法」大遊行，港警舉旗射煙霧彈驅離</a></div>
+                                                    <div class="trends_name"><a href="product.html">台中房價狂飆 房仲：西屯恐將破百萬</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -358,11 +358,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_18.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_12.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">國際/紐約時報</a></div>
+                                                <div class="trends_category"><a href="#">地方/中部離島</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">北京仍呼籲合作，但已加強抗衡美國的決心</a></div>
+                                                    <div class="trends_name"><a href="product.html">酒駕見警攔查心虛加速逃 衝撞3車害1人亡</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -375,11 +375,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_19.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_22.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">國際/國際大事</a></div>
+                                                <div class="trends_category"><a href="#">地方/大台北</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">特朗普宣布美國將取消香港特殊待遇、退出WHO</a></div>
+                                                    <div class="trends_name"><a href="product.html">導遊野柳違規被打告管理員 法官判拘批「始作俑者」</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -402,11 +402,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_20.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_23.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">國際/紐約時報</a></div>
+                                                <div class="trends_category"><a href="#">地方/南臺灣</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">他揭露了韋恩斯坦性醜聞，但他的報導真的無懈可擊嗎？</a></div>
+                                                    <div class="trends_name"><a href="product.html">雲林花生腐壞水稻空炮彈 蘇治芬盼政府救助</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
