--- a/index_money.html
+++ b/index_money.html
@@ -131,7 +131,7 @@
 										</ul>
 									</li>
 									<li class="hassubs">
-										<a href="../News/index_political.html" style="font-weight: 600;color: #17a2b8;">政治<i class="fas fa-chevron-down"></i></a>
+										<a href="../News/index_political.html">政治<i class="fas fa-chevron-down"></i></a>
 										<ul>
 											<li>
 												<a href="#">政治影音<i class="fas fa-chevron-down"></i></a>
@@ -160,7 +160,7 @@
 										</ul>
 									</li>                                    
 									<li class="hassubs">
-										<a href="../News/index_money.html">財經<i class="fas fa-chevron-down"></i></a>
+										<a href="../News/index_money.html" style="font-weight: 600;color: #17a2b8;">財經<i class="fas fa-chevron-down"></i></a>
 										<ul>
 											<li><a href="shop.html">財經大事<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="product.html">股市匯市<i class="fas fa-chevron-down"></i></a></li>
@@ -174,7 +174,8 @@
 											<li><a href="regular.html">投資理財<i class="fas fa-chevron-down"></i></a></li>
 										</ul>
 									</li>
-									<li class="hassubs"><a href="../News/index_sport.html">體育<i class="fas fa-chevron-down"></i></a>                  <ul>
+									<li class="hassubs"><a href="../News/index_sport.html">體育<i class="fas fa-chevron-down"></i></a>                  
+                                        <ul>
 											<li><a href="shop.html">棒球<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="product.html">籃球<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="blog.html">網球<i class="fas fa-chevron-down"></i></a></li>
@@ -331,7 +332,7 @@
                 <div class="trends_background" style="background-image:url(images/trends_background.jpg)"></div>
                 <div class="trends_overlay"></div>
                 <div class="container">
-                <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&nbsp政治</a></div>
+                <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&nbsp財經</a></div>
                     <div class="row" style="padding-top: 20px;">
                         <!-- Trends Slider -->
                         <div class="col-lg-12">
@@ -341,11 +342,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_1.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/photo4.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">國際/國際大事</a></div>
+                                                <div class="trends_category"><a href="#">財經/2020報稅</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">香港發起「反惡歌法」大遊行，港警舉旗射煙霧彈驅離</a></div>
+                                                    <div class="trends_name"><a href="product.html">免結算申報標準大公開，年收40.8萬以下免繳稅</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -358,11 +359,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_18.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_8.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">國際/紐約時報</a></div>
+                                                <div class="trends_category"><a href="#">財經/房地產</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">北京仍呼籲合作，但已加強抗衡美國的決心</a></div>
+                                                    <div class="trends_name"><a href="product.html">疫情趨緩房市跟著開紅盤 五月交易量大增2成</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -375,11 +376,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_19.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_25.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">國際/國際大事</a></div>
+                                                <div class="trends_category"><a href="#">財經/財經大事</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">特朗普宣布美國將取消香港特殊待遇、退出WHO</a></div>
+                                                    <div class="trends_name"><a href="product.html">急難紓困金伸出援手 桃市核定率達98％發出4.1億</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -402,17 +403,13 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_20.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_24.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">國際/紐約時報</a></div>
+                                                <div class="trends_category"><a href="#">財經/2020報稅</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">他揭露了韋恩斯坦性醜聞，但他的報導真的無懈可擊嗎？</a></div>
+                                                    <div class="trends_name"><a href="product.html">把握最後時間！想6月底拿到退稅款　網路報稅期間僅到明天</a></div>
                                                 </div>
                                             </div>
-                                            <ul class="trends_marks">
-                                                <li class="trends_mark trends_discount">-25%</li>
-                                                <li class="trends_mark trends_new">HOT</li>
-                                            </ul>
                                             <div class="trends_fav"><i class="fas fa-heart"></i></div>
                                         </div>
                                     </div>
