--- a/index_political.html
+++ b/index_political.html
@@ -331,7 +331,7 @@
                 <div class="trends_background" style="background-image:url(images/trends_background.jpg)"></div>
                 <div class="trends_overlay"></div>
                 <div class="container">
-                <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&nbsp政治</a></div>
+                <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&nbsp國際</a></div>
                     <div class="row" style="padding-top: 20px;">
                         <!-- Trends Slider -->
                         <div class="col-lg-12">
@@ -341,11 +341,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_1.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_3.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">國際/國際大事</a></div>
+                                                <div class="trends_category"><a href="#">政治/政治要聞</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">香港發起「反惡歌法」大遊行，港警舉旗射煙霧彈驅離</a></div>
+                                                    <div class="trends_name"><a href="product.html">紓困振興引爆民怨 時力民調：蔡英文滿意度大降近9%</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -358,11 +358,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_18.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_8.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">國際/紐約時報</a></div>
+                                                <div class="trends_category"><a href="#">政治/兩岸議題</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">北京仍呼籲合作，但已加強抗衡美國的決心</a></div>
+                                                    <div class="trends_name"><a href="product.html">習近平嗆武統 歐洲議會批中挺台</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -375,11 +375,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_19.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_16.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">國際/國際大事</a></div>
+                                                <div class="trends_category"><a href="#">政治/邦交國</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">特朗普宣布美國將取消香港特殊待遇、退出WHO</a></div>
+                                                    <div class="trends_name"><a href="product.html">友邦巴拉圭轉向北京？參院表決未通過</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -402,11 +402,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_20.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_16.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">國際/紐約時報</a></div>
+                                                <div class="trends_category"><a href="#">政治/三讀法案</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">他揭露了韋恩斯坦性醜聞，但他的報導真的無懈可擊嗎？</a></div>
+                                                    <div class="trends_name"><a href="product.html">《反滲透法》三讀通過！配合「境外敵對勢力」干預選舉最重關5年、罰千萬</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
