--- a/index_tech.html
+++ b/index_tech.html
@@ -131,7 +131,7 @@
 										</ul>
 									</li>
 									<li class="hassubs">
-										<a href="../News/index_political.html" style="font-weight: 600;color: #17a2b8;">政治<i class="fas fa-chevron-down"></i></a>
+										<a href="../News/index_political.html">政治<i class="fas fa-chevron-down"></i></a>
 										<ul>
 											<li>
 												<a href="#">政治影音<i class="fas fa-chevron-down"></i></a>
@@ -174,7 +174,8 @@
 											<li><a href="regular.html">投資理財<i class="fas fa-chevron-down"></i></a></li>
 										</ul>
 									</li>
-									<li class="hassubs"><a href="../News/index_sport.html">體育<i class="fas fa-chevron-down"></i></a>                  <ul>
+									<li class="hassubs"><a href="../News/index_sport.html">體育<i class="fas fa-chevron-down"></i></a>                  
+                                        <ul>
 											<li><a href="shop.html">棒球<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="product.html">籃球<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="blog.html">網球<i class="fas fa-chevron-down"></i></a></li>
@@ -182,7 +183,7 @@
 											<li><a href="regular.html">羽球<i class="fas fa-chevron-down"></i></a></li>
                                         </ul>
                                     </li>
-                                    <li class="hassubs"><a href="../News/index_tech.html">科技<i class="fas fa-chevron-down"></i></a>
+                                    <li class="hassubs"><a href="../News/index_tech.html" style="font-weight: 600;color: #17a2b8;">科技<i class="fas fa-chevron-down"></i></a>
                                         <ul>											
 											<li><a href="blog.html">iPhone手機<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="blog_single.html">3C家電<i class="fas fa-chevron-down"></i></a></li>
@@ -331,7 +332,7 @@
                 <div class="trends_background" style="background-image:url(images/trends_background.jpg)"></div>
                 <div class="trends_overlay"></div>
                 <div class="container">
-                <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&nbsp政治</a></div>
+                <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&nbsp科技</a></div>
                     <div class="row" style="padding-top: 20px;">
                         <!-- Trends Slider -->
                         <div class="col-lg-12">
@@ -341,11 +342,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_1.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_30.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">國際/國際大事</a></div>
+                                                <div class="trends_category"><a href="#">科技/iPhone手機</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">香港發起「反惡歌法」大遊行，港警舉旗射煙霧彈驅離</a></div>
+                                                    <div class="trends_name"><a href="product.html">追隱私更有保障！Google Maps無痕模式 iPhone用戶也能用</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -358,11 +359,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_18.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_29.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">國際/紐約時報</a></div>
+                                                <div class="trends_category"><a href="#">科技/iPhone手機</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">北京仍呼籲合作，但已加強抗衡美國的決心</a></div>
+                                                    <div class="trends_name"><a href="product.html">廖明毅初試啼聲 以iPhone拍出超前部署防疫愛情電影</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -375,11 +376,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_19.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_32.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">國際/國際大事</a></div>
+                                                <div class="trends_category"><a href="#">科技/3C家電</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">特朗普宣布美國將取消香港特殊待遇、退出WHO</a></div>
+                                                    <div class="trends_name"><a href="product.html">羅技G913 TKL 80％無線機械式鍵盤6月上市 續航力無「線」升級！</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -402,17 +403,13 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_20.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_31.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">國際/紐約時報</a></div>
+                                                <div class="trends_category"><a href="#">科技/人工智慧</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">他揭露了韋恩斯坦性醜聞，但他的報導真的無懈可擊嗎？</a></div>
+                                                    <div class="trends_name"><a href="product.html">Google即時翻譯超方便？逼近真人對話 線上會議、課程內容全都講給你聽！</a></div>
                                                 </div>
                                             </div>
-                                            <ul class="trends_marks">
-                                                <li class="trends_mark trends_discount">-25%</li>
-                                                <li class="trends_mark trends_new">HOT</li>
-                                            </ul>
                                             <div class="trends_fav"><i class="fas fa-heart"></i></div>
                                         </div>
                                     </div>
